# Wind-project

./: .env  Dockerfile  Dockerfile_api  Dockerfile_dash  README.md  crontab  docker-compose.yml  map.html  pyproject.toml
connectors/: mongodb-sink-connector.json
src/: Dockerfile.api  __init__.py  api_current_weather.py  api_fetch_powercurves_every_day.py  api_scala_10min_and_scrape_every_ten_minutes.py  api_weather.py  api_windturbine.py  app.py  config.py  create_ref_mariadb.py  create_ref_mongodb.py  dashboard.py  dataviz.ipynb  dataviz_dash.py  dataviz_farms.ipynb  deployment.yml  export_map.py  from_db_to_df.py  functions_db_to_df.ipynb  get_eol_data.py  import_currentweather.py  import_forecastweather.py  import_openweathermap.py  import_referentials.py  import_scada_10mn.py  index.html  ingress.yml  init_db.py  insert_mariadb.py  insert_mongodb_weather.py  main.py  models.py  mongodb_weather.py  ref_mariadb.py  requirements.txt  scada_graphs.ipynb  scada_viz.ipynb  scada_viz_new.ipynb  services.yml  table_dataviz.ipynb  (+2 more)
src/airflow/dags/: test.py  weather_scada_data_import.py
src/assets/: styles.css
src/classes/: ForecastWeatherAPI.py  WindAPI.py
src/db/: create_ref_mariadb.py
src/imports/: import_currentweather.py  import_forecastweather.py  import_referentials.py  import_scada_10mn.py
src/notebooks/: functions_db_to_df.ipynb  turbines_map.ipynb
src/tests/: connection_mongodb_test.py  test_mariadb.py  test_scada.py  test_scala.py
src/todelete/: get_eol_data.py  init_db.py
